# trajectories

./: .gitmodules  CMakeLists.txt  CopyShaders.cmake
include/trajectories/: body.hpp  orbit.hpp  system.hpp
lib/: orbit.cpp
shaders/: axis_shader.frag  axis_shader.geom  axis_shader.vert  orbit_shader.frag  orbit_shader.geom
src/: load_shaders.cpp  load_shaders.hpp  main.cpp  orbit_view_window.cpp  orbit_view_window.hpp  scene.cpp  scene.hpp
